tuzatishlar va o'zgartirishlar kiritildi
