# api/handler/budgeting/notification_methods.go
@@ -4,6 +4,7 @@ import (
 	"api-gateway/api/token"
 	pb "api-gateway/generated/budgeting"
 	"api-gateway/models"
+	"encoding/json"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,11 +15,11 @@ import (
 // @accept 		json
 // @produce 	json
 // @param 		sendNotificationReq body budgeting.SendNotificationReq true "Send notification request"
-// @success 	200 {object} budgeting.SendNotificationResp
+// @success 	200 {object} models.Response
 // @failure 	400 {object} models.ErrorResponse
 // @failure 	500 {object} models.ErrorResponse
 // @failure 	404 {object} map[string]interface{}
-// @route 		/notification/send [post]
+// @router 		/notification/send [post]
 func (h *budgettingHandlerImpl) SendNotificationHandler(ctx *gin.Context) {
 	var sendNotificationReq pb.SendNotificationReq
 	if err := ctx.ShouldBindJSON(&sendNotificationReq); err != nil {
@@ -30,9 +31,19 @@ func (h *budgettingHandlerImpl) SendNotificationHandler(ctx *gin.Context) {
 		})
 		return
 	}
-	resp, err := h.reportingManagement.SendNotification(ctx, &sendNotificationReq)
+	// resp, err := h.reportingManagement.SendNotification(ctx, &sendNotificationReq)
+	// if err != nil {
+	// 	h.logger.Error("Error sending notification", "error", err)
+	// 	ctx.JSON(500, models.ErrorResponse{
+	// 		Status:  500,
+	// 		Message: "Internal Server Error",
+	// 		Error:   err.Error(),
+	// 	})
+	// 	return
+	// }
+	data, err := json.Marshal(&sendNotificationReq)
 	if err != nil {
-		h.logger.Error("Error sending notification", "error", err)
+		h.logger.Error("Error marshaling response", "error", err)
 		ctx.JSON(500, models.ErrorResponse{
 			Status:  500,
 			Message: "Internal Server Error",
@@ -40,27 +51,20 @@ func (h *budgettingHandlerImpl) SendNotificationHandler(ctx *gin.Context) {
 		})
 		return
 	}
-	// data, err := json.Marshal(&sendNotificationReq)
-	// if err != nil {
-	// 	h.logger.Error("Error marshaling response", "error", err)
-	//     ctx.JSON(500, models.ErrorResponse{
-	//         Status:  500,
-	//         Message: "Internal Server Error",
-	//         Error:   err.Error(),
-	//     })
-	//     return
-	// }
-	// err = h.producer.ProducerMessage("notifications", data)
-	// if err!= nil {
-	// 	h.logger.Error("Failed to produce message", "error", err)
-	//     ctx.JSON(500, models.ErrorResponse{
-	//         Status:  500,
-	//         Message: "Internal Server Error",
-	//         Error:   err.Error(),
-	//     })
-	//     return
-	// }
-	ctx.JSON(200, resp)
+	err = h.producer.ProducerMessage("notifications", data)
+	if err != nil {
+		h.logger.Error("Failed to produce message", "error", err)
+		ctx.JSON(500, models.ErrorResponse{
+			Status:  500,
+			Message: "Internal Server Error",
+			Error:   err.Error(),
+		})
+		return
+	}
+	ctx.JSON(200, models.Response{
+		Message: "Notification sent successfully",
+        Status:  "success",
+	})
 }
 
 // @summary 	Get notification list
@@ -72,39 +76,39 @@ func (h *budgettingHandlerImpl) SendNotificationHandler(ctx *gin.Context) {
 // @failure 	400 {object} models.ErrorResponse
 // @failure 	500 {object} models.ErrorResponse
 // @failure 	404 {object} map[string]interface{}
-// @route 		/notification/list [get]
+// @router 		/notification/list [get]
 func (h *budgettingHandlerImpl) GetNotificationListHandler(ctx *gin.Context) {
 	val, exists := ctx.Get("claims")
 	if !exists {
 		h.logger.Error("Missing token claims")
-        ctx.JSON(400, models.ErrorResponse{
-            Status:  400,
-            Message: "Missing token claims",
-            Error:   "Missing token claims",
-        })
-        return
+		ctx.JSON(400, models.ErrorResponse{
+			Status:  400,
+			Message: "Missing token claims",
+			Error:   "Missing token claims",
+		})
+		return
 	}
 	claims, err := token.TokenClaimsParse(val)
-	if err!= nil {
+	if err != nil {
 		h.logger.Error("Invalid access token")
-        ctx.JSON(403, models.ErrorResponse{
-            Status:  403,
-            Message: "Invalid access token",
-            Error:   err.Error(),
-        })
-        return
+		ctx.JSON(403, models.ErrorResponse{
+			Status:  403,
+			Message: "Invalid access token",
+			Error:   err.Error(),
+		})
+		return
 	}
 	resp, err := h.reportingManagement.GetNotificationList(ctx, &pb.GetNotificationsListReq{
 		UserId: claims.GetId(),
 	})
-	if err!= nil {
+	if err != nil {
 		h.logger.Error("Error getting notification list", "error", err)
-        ctx.JSON(500, models.ErrorResponse{
-            Status:  500,
-            Message: "Internal Server Error",
-            Error:   err.Error(),
-        })
-        return
+		ctx.JSON(500, models.ErrorResponse{
+			Status:  500,
+			Message: "Internal Server Error",
+			Error:   err.Error(),
+		})
+		return
 	}
 	ctx.JSON(200, resp)
 }
@@ -122,17 +126,17 @@ func (h *budgettingHandlerImpl) GetNotificationListHandler(ctx *gin.Context) {
 // @router		/notification/{id} [get]
 func (h *budgettingHandlerImpl) GetNotificationHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
-    resp, err := h.reportingManagement.GetNotification(ctx, &pb.GetNotificationReq{Id: id})
-    if err!= nil {
-        h.logger.Error("Error getting notification", "error", err)
-        ctx.JSON(500, models.ErrorResponse{
-            Status:  500,
-            Message: "Internal Server Error",
-            Error:   err.Error(),
-        })
-        return
-    }
-    ctx.JSON(200, resp)
+	resp, err := h.reportingManagement.GetNotification(ctx, &pb.GetNotificationReq{Id: id})
+	if err != nil {
+		h.logger.Error("Error getting notification", "error", err)
+		ctx.JSON(500, models.ErrorResponse{
+			Status:  500,
+			Message: "Internal Server Error",
+			Error:   err.Error(),
+		})
+		return
+	}
+	ctx.JSON(200, resp)
 }
 
 // @summary 	Update notification
@@ -152,9 +156,9 @@ func (h *budgettingHandlerImpl) UpdateNotificationHandler(ctx *gin.Context) {
 	if err := ctx.ShouldBindJSON(&updateNotificationReq); err != nil {
 		h.logger.Error("Invalid request body", "error", err)
 		ctx.JSON(400, models.ErrorResponse{
-			Status: 400,
+			Status:  400,
 			Message: "Invalid request body",
-			Error: err.Error(),
+			Error:   err.Error(),
 		})
 		return
 	}
@@ -164,9 +168,9 @@ func (h *budgettingHandlerImpl) UpdateNotificationHandler(ctx *gin.Context) {
 	if err != nil {
 		h.logger.Error("Error updating notification", "error", err)
 		ctx.JSON(500, models.ErrorResponse{
-			Status: 500,
+			Status:  500,
 			Message: "Internal server error",
-			Error: err.Error(),
+			Error:   err.Error(),
 		})
 		return
 	}
@@ -188,14 +192,14 @@ func (h *budgettingHandlerImpl) UpdateNotificationHandler(ctx *gin.Context) {
 func (h *budgettingHandlerImpl) DeleteNotificationHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
 	resp, err := h.reportingManagement.DeleteNotification(ctx, &pb.DeleteNotificationReq{Id: id})
-	if err!= nil {
+	if err != nil {
 		h.logger.Error("Error deleting notification", "error", err)
-        ctx.JSON(500, models.ErrorResponse{
-            Status: 500,
-            Message: "Internal server error",
-            Error: err.Error(),
-        })
-        return
+		ctx.JSON(500, models.ErrorResponse{
+			Status:  500,
+			Message: "Internal server error",
+			Error:   err.Error(),
+		})
+		return
 	}
 	ctx.JSON(200, resp)
 }
